--- a/src/styles/Home.module.css
+++ b/src/styles/Home.module.css
@@ -32,7 +32,12 @@
   border: 1px solid rgba(var(--callout-border-rgb), 0.3);
   border-radius: var(--border-radius);
 }
-
+.button{
+  background: rgb(22,22,28);
+  background: linear-gradient(90deg, rgba(22,22,28,1) 0%, rgba(72,72,203,1) 100%);
+  padding: 10px;
+  border-radius: 10px;
+}
 .code {
   font-weight: 700;
   font-family: var(--font-mono);
